Add complementary Java code for GH Actions.